# atelier-wiki

./: .gitignore  .gitmodules  Development.md  Justfile  README.md  todo.json
data-prepper/: .gitignore  Cargo.toml  config.example.toml
data-prepper/src/: config.rs  extract.rs  extract_images.rs  main.rs
data-prepper/src/extract/: mod.rs  pak_index.rs
data-prepper/src/extract/data/: items.rs  mod.rs  strings.rs  strings_table.rs  util.rs
data-prepper/src/extract/data/enemies/: data.rs  drop.rs  library_monster.rs  mod.rs  status.rs
data-prepper/src/extract/data/field_data/: gimmick.rs  mod.rs
data-prepper/src/extract/data/field_map/: fm_info.rs  fm_info2.rs  mod.rs  region_maps.rs
data-prepper/src/extract/data/item_categories/: mod.rs
data-prepper/src/extract/data/item_effects/: item_effect.rs  mod.rs
data-prepper/src/extract/data/items/: item_data.rs  library_item.rs  mod.rs
data-prepper/src/extract/data/recipes/: itemrecipedata.rs  mixfielddata.rs  mod.rs
data-prepper/src/extract/executable/: mod.rs
data-prepper/src/extract/ryza3/: mod.rs
data-prepper/src/extract/ryza3/data/: mod.rs  strings_table.rs
data-prepper/src/extract/sophie/: mod.rs
data-prepper/src/extract/sophie/data/: mod.rs
data-prepper/src/extract/util/: mod.rs
data-prepper/src/extract_images/: extract_maps.rs  mod.rs  packed_image.rs  rgba8_image.rs  texture_atlas.rs  upload_manager.rs
data-prepper/src/ryza3/: mod.rs
data-prepper/src/ryza3/data/: mod.rs  strings_table.rs
data-prepper/src/ryza3/data/enemies/: data.rs  drop.rs  library_monster.rs  mod.rs  status.rs
data-prepper/src/ryza3/data/feeding/: mod.rs  species.rs  unique_item_event.rs
data-prepper/src/ryza3/data/field_data/: mod.rs  (+2 more)
data-prepper/src/ryza3/extract_images/: extract_maps.rs  mod.rs
data-prepper/src/shared/xml/: mod.rs  ui_spritesheet.rs
data-prepper/src/sophie/: mod.rs
data-prepper/src/sophie/data/: mod.rs
data-prepper/src/sophie/extract_images/: mod.rs
data-prepper/src/typedefs/: mod.rs
data-prepper/src/utils/: mod.rs  pak_index.rs  xml_reader.rs
data-prepper/src/utils/images/: mod.rs  rgba8_image.rs
(+136 files in other folders)
