[package]
name = "data-prepper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
argh = "0.1.10"
gust-pak = { git = "https://github.com/holly-hacker/atelier-tools", branch = "main" }
roxmltree = { version = "0.18.0", default-features = false, features = ["std"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
typescript-type-def = "0.5.7"
