[package]
name = "data-prepper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
gust-g1t = { git = "https://github.com/holly-hacker/atelier-tools", branch = "main" }
gust-pak = { git = "https://github.com/holly-hacker/atelier-tools", branch = "main" }
hex = "0.4.3"
md5 = "0.7.0"
memchr = "2.6.3"
oxipng = { git = "https://github.com/shssoichiro/oxipng.git", rev = "02bd47ba297ffdc1210c89b6f98c0d2c4b31d155", default-features = false, features = [
    "parallel",
    "zopfli",
] }
png = "0.17.10"
rayon = "1.7.0"
roxmltree = { version = "0.18.0", default-features = false, features = ["std"] }
rust-s3 = { version = "0.33.0", default-features = false, features = [
    "sync",
    "tags",
    "sync-native-tls",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = { version = "0.8.0", default-features = false, features = ["parse"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
typescript-type-def = "0.5.8"
webp = { version = "0.2.5", default-features = false }

[profile.dev.package.data-prepper]
opt-level = 1

[profile.dev.package.roxmltree]
opt-level = 2

[profile.dev.package.png]
opt-level = 2

[profile.dev.package.simd-adler32]
opt-level = 2

[profile.dev.package.dds-decoder]
opt-level = 2
